--- a/style.css
+++ b/style.css
@@ -239,3 +239,45 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.container-text {
+  padding: 2rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+  color: #1b1b1b;
+  text-align: center;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 2rem;
+  color: #2b6777;
+  border-bottom: 2px solid #0078d7;
+  padding-bottom: 0.5rem;
+  margin: 2rem 0 1rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  color: #4396ac;
+  margin-bottom: 0.75rem;
+}
+
+p {
+  font-size: 1rem;
+  color: #2b6777;
+  margin: 0.5rem 0;
+  background-color: #cce3de;
+  padding: 0.75rem;
+  border-radius: 5px;
+}
+
+kbd {
+  border-radius: 0.25rem;
+  background-color: black;
+  color: white;
+  padding: 0.15rem 0.4rem;
+}
