--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ h1 {
 h2 {
   font-size: 2rem;
   color: #2b6777;
-  border-bottom: 2px solid #0078d7;
+  border-bottom: 2px solid #848484;
   padding-bottom: 0.5rem;
   margin: 2rem 0 1rem;
 }
@@ -264,6 +264,12 @@ h3 {
   font-size: 1.5rem;
   color: #4396ac;
   margin-bottom: 0.75rem;
+}
+
+h4 {
+  font-size: 1rem;
+  color: #285b69;
+  margin-bottom: 0.5rem;
 }
 
 p {
@@ -279,5 +285,12 @@ kbd {
   border-radius: 0.25rem;
   background-color: black;
   color: white;
+  padding: 0.15rem 0.4rem;
+}
+
+code {
+  border-radius: 0.25rem;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   padding: 0.15rem 0.4rem;
 }
